force-app/main/default/objects/Online_Learning__c/Online_Learning__c.object-meta.xml
<CustomObject>
    <description>Used for member modules on LearnUpon -- excluding SFA</description>
    <label>Online Learning</label>
    <nameField>
        <displayFormat>OL-{0000}</displayFormat>
        <label>Online Learning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Learning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>