force-app/main/default/objects/Online_Learning__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Online Learning</relationshipLabel>
    <relationshipName>Online_Learning</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>