force-app/main/default/objects/Online_Learning__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schwartz Center Member Orientation</fullName>
            </value>
            <value>
                <fullName>Schwartz Rounds Orientation and Training</fullName>
            </value>
            <value>
                <fullName>Schwartz Rounds Video Observation</fullName>
            </value>
            <value>
                <fullName>Introduction to Trauma-Informed Facilitation Skills</fullName>
            </value>
            <value>
                <fullName>Intruduction to Unit-Based Schwartz Rounds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>