force-app/main/default/objects/Online_Learning__c/fields/Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete__c</fullName>
    <formula>Date_Completed__c -  Date_Started__c</formula>
    <label>Days to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>