force-app/main/default/objects/Online_Learning__c/fields/OL_Note__c.field-meta.xml
<CustomField>
    <fullName>OL_Note__c</fullName>
    <label>OL Note</label>
    <length>100</length>
    <type>Text</type>
</CustomField>